Fix third UnsupportedOperationException in filterFrequentLemmas and add pagination test
Co-authored-by: mrcreate163 <170453807+mrcreate163@users.noreply.github.com>